Bug 466136 - Multi-screen arrangement scrambled on login with screens from the same model but serial numbers that differ by only one character at the end
Summary: Multi-screen arrangement scrambled on login with screens from the same model ...
Status: RESOLVED FIXED
Alias: None
Product: KScreen
Classification: Plasma
Component: common (other bugs)
Version First Reported In: 5.27.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kscreen-bugs-null@kde.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-20 11:33 UTC by simonschaefer
Modified: 2023-02-24 11:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.2
Sentry Crash Report:


Attachments
screenshot of one of the screens with shorter identify string (with already applied workaround) (155.38 KB, image/png)
2023-02-20 11:33 UTC, simonschaefer
Details

Note You need to log in before you can comment on or make changes to this bug.
Description simonschaefer 2023-02-20 11:33:06 UTC
Created attachment 156529 [details]
screenshot of one of the screens with shorter identify string (with already applied workaround)

SUMMARY
When having two monitors from the same vendor where in the serial number only the last digit differs, the multiscreen setup is not stored correctly. In the office we have quite a lot of the same monitors from the same vendor and on one of the shared places two monitors with nearly the same id are placed next to each other. A screen setup with those does not work. While the Configuration screen inside the Settings shows the 13digit serialnumber (the number between the name and the resolution) correctly, the identify function only shows the first 12 digits, so my guess is that the settings only store 12 as well, which then mixes them randomly at each start.


STEPS TO REPRODUCE
1. get two screens, with nearly the same id (has to change after the 12th digit)
2. connect to pc
3. configure
4. reboot
5. rearranged, if not go back to 4 again

OBSERVED RESULT
Mixed up screen setup after reboot

EXPECTED RESULT
use the correct id of 13 digits (or more if there are more given)

WORKAROUND
Exchange monitors from shared desk until they differ in at least the 12th digit. This does not work if you only got two monitors.

ADDITIONAL INFORMATION
The screens are: "Iiyama North America PL2893UH"
Comment 1 Nate Graham 2023-02-21 21:59:43 UTC
Fascinating
Comment 2 Bug Janitor Service 2023-02-24 09:26:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/3684
Comment 3 David Redondo 2023-02-24 11:06:17 UTC
Git commit 693ea96599c76df03b522fa4f180edf2f4041526 by David Redondo.
Committed on 24/02/2023 at 11:06.
Pushed by davidre into branch 'master'.

Fix edid serial parsing

Descriptor blocks are 18 bytes, the serial number one has space
for 13 bytes of serial number.
FIXED-IN:5.27.2

M  +3    -3    src/utils/edid.cpp

https://invent.kde.org/plasma/kwin/commit/693ea96599c76df03b522fa4f180edf2f4041526
Comment 4 David Redondo 2023-02-24 11:48:55 UTC
Git commit fb59d975b5377f858b94dbfe333256ec9c4bfd6d by David Redondo.
Committed on 24/02/2023 at 11:06.
Pushed by davidre into branch 'Plasma/5.27'.

Fix edid serial parsing

Descriptor blocks are 18 bytes, the serial number one has space
for 13 bytes of serial number.
FIXED-IN:5.27.2


(cherry picked from commit 693ea96599c76df03b522fa4f180edf2f4041526)

M  +3    -3    src/utils/edid.cpp

https://invent.kde.org/plasma/kwin/commit/fb59d975b5377f858b94dbfe333256ec9c4bfd6d